--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="StellarForge-Enhanced - Scientific cosmic simulation platform for observing and simulating the universe" />
-  <title>StellarForge-Enhanced - Scientific Cosmic Simulation</title>
+    content="CelestialMechanics - Scientific cosmic simulation platform for observing and simulating the universe" />
+  <title>CelestialMechanics - Scientific Cosmic Simulation</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
